Changed name of services section

--- a/our-services/index.html
+++ b/our-services/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 title: Media Suite | What we do
-menutitle: What we do
+menutitle: Our services
 menuorder: 3
 ---
 <div id="main-wrap">
 
   <div class="panel-inner max-1200 clearfix">
-      <h1>What we do</h1>
+      <h1>Our services</h1>
   </div>
 
 </div> <!-- #main-wrap -->
