renamed who we are section to people, added names to people page

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@ ishome: true
           <h2 class="lowercase underline-orange">Our Culture</h2>
           <div class="cols-wrap">
             <div class="col third-col" id="culture-col-1">
-              <a href="{{ "/who-we-are" | prepend: site.baseurl }}"><img class="home-team-img jiggle" src="{{ "/img/home-team.png" | prepend: site.baseurl }}" alt="" /></a>
+              <a href="{{ "/people" | prepend: site.baseurl }}"><img class="home-team-img jiggle" src="{{ "/img/home-team.png" | prepend: site.baseurl }}" alt="" /></a>
               <h3 class="lowercase text-size-40">We give a shit.</h3><br>
-              <a href="{{ "/who-we-are" | prepend: site.baseurl }}" class="drop-btn orange-bg">Get to know the team</a>
+              <a href="{{ "/people" | prepend: site.baseurl }}" class="drop-btn orange-bg">Get to know the team</a>
             </div>
             <div class="col third-col" id="culture-col-2">
               <h2 class="lowercase text-size-45">Values</h2>
