--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ ishome: true
     </div> <!-- .naaw-its-mattie -->
   </section>
 
-   <section id="clients-panel" class="content-panel">
+  <section id="clients-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
       <div class="faux-table">
         <div class="faux-table-cell">
@@ -92,8 +92,7 @@ ishome: true
     </div>
   </section>
 
-
-   <section id="work-panel" class="content-panel">
+  <section id="work-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
       <div class="faux-table">
         <div class="faux-table-cell">
@@ -118,7 +117,6 @@ ishome: true
       </div> <!-- .faux-table -->
     </div> <!-- .panel-inner -->
   </section>
-
 
   <section id="value-panel" class="content-panel">
     <div class="panel-inner max-1200 clearfix js-fade-in-up">
@@ -178,9 +176,33 @@ ishome: true
   </section>
 
   <section id="hello-panel" class="content-panel">
-    <div class="panel-inner clearfix js-fade-in-up">
-      <h2 class="lowercase underline-orange">Say hello</h2>
-
+    <div class="panel-inner max-1000 clearfix js-fade-in-up">
+      <div class="faux-table">
+        <div class="faux-table-cell">
+          <h2 class="lowercase underline-orange">Locations</h2>
+          <div class="cols-wrap">
+            <div class="col half-col" id="location-col-1">
+              <div class="circle-link">
+                <h3 class="circle-main-hd lowercase fancy-pants-font">Christchurch</h3>
+                <h4 class="circle-sub-hd lowercase">New Zealand</h4>
+                <a href="https://www.google.co.nz/maps/place/Web+Design+Christchurch+%7C+Media+Suite/@-43.5560525,172.7021522,17z/data=!3m1!4b1!4m2!3m1!1s0x6d318827b1845c03:0x27ff5a1af46237fb" class="js-image-fill" data-no-instant target="_blank">
+                  <img src="{{ "/img/hello-chch.jpg" | prepend: baseurl }}" alt="Media Suite office in Christchurc, New Zealand" />
+                </a>
+              </div>
+            </div> <!-- .col -->
+            <div class="col half-col" id="location-col-2">
+              <div class="circle-link">
+                <h3 class="circle-main-hd lowercase fancy-pants-font">Oslo</h3>
+                <h4 class="circle-sub-hd lowercase">Norway</h4>
+                <a href="https://www.google.co.nz/maps/place/Oslo,+Norway/@59.8937806,10.6450366,11z/data=!3m1!4b1!4m2!3m1!1s0x46416e61f267f039:0x7e92605fd3231e9a" class="js-image-fill" data-no-instant target="_blank">
+                  <img src="{{ "/img/hello-oslo.jpg" | prepend: baseurl }}" alt="Media Suite office in Oslo, Norway" />
+                </a>
+              </div>
+            </div> <!-- .col -->
+          </div> <!-- .cols-wrap -->
+          <a href="{{ "/say-hello" | prepend: baseurl }}" class="drop-btn orange-bg">Say hello</a>
+        </div> <!-- .faux-table-cell -->
+      </div> <!-- .faux-table -->
     </div>
   </section>
 
