--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ ishome: true
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Christchurch</h3>
                 <h4 class="circle-sub-hd lowercase">New Zealand</h4>
                 <a href="https://www.google.co.nz/maps/place/Web+Design+Christchurch+%7C+Media+Suite/@-43.5560525,172.7021522,17z/data=!3m1!4b1!4m2!3m1!1s0x6d318827b1845c03:0x27ff5a1af46237fb" class="js-image-fill" data-no-instant target="_blank">
-                  <img src="{{ "/img/hello-chch.jpg" | prepend: baseurl }}" alt="Media Suite office in Christchurc, New Zealand" />
+                  <img src="{{ "/img/hello-chch.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Christchurc, New Zealand" />
                 </a>
               </div>
             </div> <!-- .col -->
@@ -195,12 +195,12 @@ ishome: true
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Oslo</h3>
                 <h4 class="circle-sub-hd lowercase">Norway</h4>
                 <a href="https://www.google.co.nz/maps/place/Oslo,+Norway/@59.8937806,10.6450366,11z/data=!3m1!4b1!4m2!3m1!1s0x46416e61f267f039:0x7e92605fd3231e9a" class="js-image-fill" data-no-instant target="_blank">
-                  <img src="{{ "/img/hello-oslo.jpg" | prepend: baseurl }}" alt="Media Suite office in Oslo, Norway" />
+                  <img src="{{ "/img/hello-oslo.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Oslo, Norway" />
                 </a>
               </div>
             </div> <!-- .col -->
           </div> <!-- .cols-wrap -->
-          <a href="{{ "/say-hello" | prepend: baseurl }}" class="drop-btn orange-bg">Say hello</a>
+          <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="drop-btn orange-bg">Say hello</a>
         </div> <!-- .faux-table-cell -->
       </div> <!-- .faux-table -->
     </div>
