line-height issues, overflow of svg on home page etc.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ishome: true
         </div>
       </div> <!-- .faux-table -->
     </div> <!-- .banner-text-wrap -->
-    <div class="naaw-its-mattie">
+    <div class="naaw-its-mattie mob-hide">
       <a href="#work-panel" class="js-next-panel mattie-link" data-no-instant>
         <img src="{{ "/img/mattie.png" | prepend: site.baseurl }}" width="255" height="162" alt="" />
         <span class="tail-tip"><img class="tip-wag" src="{{ "/img/tail-tip.png" | prepend: site.baseurl }}" width="38" height="46" alt="" /></span>
