--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@ ishome: true
       </div>
     </div> <!-- #home-panel-nav -->
     <div class="covervid-wrapper">
-      <video class="js-covervid-video" autoplay loop>
-        <source src="{{ "/img/looped.mp4" | prepend: site.baseurl }}" type="video/mp4">
+      <div class="video-fallback js-image-fill">
+        <img src="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}" alt="" />
+      </div>
+      <video class="js-covervid-video" poster="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}" autoplay loop>
+        <source src="http://d88e5668b252622f19fa-53b266e97c0af9c711d72e69e4af35ea.r86.cf4.rackcdn.com/looped.mp4" type="video/mp4">
       </video>
     </div> <!-- .covervid-wrapper -->
     <div class="banner-text-wrap">
@@ -70,7 +73,7 @@ ishome: true
         <div class="faux-table-cell">
 
           <h2 class="lowercase underline-orange">Build the right thing</h2>
-          <p class="text-size-24 max-850">We combine <span class="emphasis">thoughtful design</span> with <span class="emphasis">clever technology</span> to help build successful Software, Websites &amp; Apps for a range of private businesses &amp; progressive organisations.</p>
+          <p class="text-size-24 max-850">We combine <span class="emphasis">thoughtful design</span> with <span class="emphasis">clever technology</span> to help build successful software, websites &amp; apps for a range of private businesses &amp; progressive organisations.</p>
 
           <ul class="logo-grid">
             <li class="grid-item"><a href="#" class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/1-nzta.png" | prepend: site.baseurl }}" alt="" /></a></li>
