--- a/people/index.html
+++ b/people/index.html
@@ -569,7 +569,7 @@ menuorder: 4
       <div id="person-matisse" class="person-wrap js-iso-element" data-coffees="930" data-commits="65" data-cats="999">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/matisse.png" | prepend: site.baseurl }}" alt="Terri Winder" />
+          <img class="person-image" src="{{ "/img/people/matisse.png" | prepend: site.baseurl }}" alt="Matisse" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -587,7 +587,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Woof woof woof woof woof woof woof woof woof woof woof. Woof.</p>
+                  <p>Likes: the taste of feet, sleeping, long walks on the beach. Dislikes: the milkman/lady, being left in the car/at the supermarket/being forgotten about in general. Obligatory woof: "woof".</p>
                   <strong>* snoring noises *</strong>
                 </div>
               </div>
