--- a/say-hello/index.html
+++ b/say-hello/index.html
@@ -4,10 +4,10 @@ title: Media Suite | Say hello
 menutitle: Say hello
 menuorder: 5
 ---
-<div id="main-wrap">
+<div id="main-wrap" class="internal-page contact-page">
 
   <div class="panel-inner max-1200 clearfix">
-      <h1>Say hello</h1>
+      <h1 class="lowercase underline-orange">Say hello</h1>
   </div>
 
 </div> <!-- #main-wrap -->
