reduced font size for bios

--- a/people/index.html
+++ b/people/index.html
@@ -137,7 +137,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>The multi-talented Ersin is part of our Node.js team but is equally talented in PHP, Objective C, Ruby & Go. His current fascination is with containerised services and learning to work remote. Check the surf forecast for his likely locale.</p>
+                  <p>The multi-talented Ersin is part of our Node.js team but is equally talented in PHP, Objective C, Ruby &amp; Go. His current fascination is with containerised services and learning to work remote. Check the surf forecast for his likely locale.</p>
                 </div>
               </div>
             </div>
@@ -295,7 +295,7 @@ menuorder: 4
                 </div>
                 <div class="bio-body">
                   <p>Lewis's passion for climbing and travelling is currently dragging him (and his laptop) around the world. Lewis is an encyclopaedia of knowledge - much accurate, some relevant. Just don't ask him where he is going to be living next month because; a) he doesn't know; b) it will make you jealous</p>
-                  <strong>&hellip; Recent residences include: Cat Ba, Hanoi, Getu & Innsbruck, Boulder & Nelson.</strong>
+                  <strong>&hellip; Recent residences include: Cat Ba, Hanoi, Getu &amp; Innsbruck, Boulder &amp; Nelson.</strong>
                 </div>
               </div>
             </div>
@@ -414,13 +414,13 @@ menuorder: 4
               <div class="faux-table-cell">
                 <div class="bio-head">
                   <h2 class="bio-heading">Pete Banks</h2>
-                  <h3 class="bio-sub">Business Analyst & Project Manager</h3>
+                  <h3 class="bio-sub">Business Analyst &amp; Project Manager</h3>
                   <div class="js-image-fill bio-real-image">
                     <img src="{{ "/img/people/real-pete.jpg" | prepend: site.baseurl }}" alt="Pete Banks" />
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Pete is able to give structure to complex problems, competing requirements and growing backlogs. His background as a Business Analysts and passion for building the right thing keeps our project teams (and our clients) focused on delivering true value.
+                  <p>Pete is able to give structure to complex problems, competing requirements and growing backlogs. His background as a business analyst and passion for building the right thing keeps our project teams (and our clients) focused on delivering true value.
 Pete is a Project Management Professional, Prince2 Practitioner and is also a certified Scrum Master.</p>
                   <strong>&hellip; Pete was once stuck in a snow cave and forced to drink his own urine. We promised we wouldn’t tell anyone.</strong>
                 </div>
@@ -486,8 +486,8 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Sarah is the creative genius behind much of our design and branding work. Being a classically trained artist and with over 15 years experience as a graphic designer she possesses the ability to deconstruct the  essence of visual ideas down to their elements.</p>
-                  <strong>Sarah is also a painter - some of her work can be found on the walls at Media Suite. </strong>
+                  <p>Sarah is the creative genius behind much of our design and branding work. Being a classically trained artist and with over 15 years experience as a graphic designer she possesses the ability to deconstruct the essence of visual ideas down to their elements.</p>
+                  <strong>Sarah is also a painter - some of her work can be found on the walls at Media Suite.</strong>
                 </div>
               </div>
             </div>
@@ -518,7 +518,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Steve has a background in corporate accounting but rather than convert his Singaporean accounting qualifications when he moved to NZ he decided to reboot his career into software development. After graduating from Dev Academy, Steve took up an internship with us - we decided he was too good to lose and is now a part of our code development team. </p>
+                  <p>Steve has a background in corporate accounting but rather than convert his Singaporean accounting qualifications when he moved to NZ he decided to reboot his career into software development. After graduating from Dev Academy, Steve took up an internship with us - we decided he was too good to lose and is now a part of our code development team.</p>
                 </div>
               </div>
             </div>
