fixed starbust drop-shadow image

--- a/people/index.html
+++ b/people/index.html
@@ -29,6 +29,8 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+<img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -60,6 +62,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -92,6 +95,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -123,6 +127,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -154,6 +159,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -186,6 +192,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -218,6 +225,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -249,6 +257,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -280,6 +289,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -312,6 +322,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -343,6 +354,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -374,6 +386,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -406,6 +419,7 @@ menuorder: 4
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -439,6 +453,7 @@ Pete is a Project Management Professional, Prince2 Practitioner and is also a ce
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -472,6 +487,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -504,6 +520,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -535,6 +552,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
@@ -566,6 +584,7 @@ Originally from Christchurch, Richie is now based in Oslo where he leads our Eur
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
           </span>
         </a>
         <div class="bio-wrap">
