Added case study imagery

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -42,8 +42,8 @@ menuorder: 2
           </div>
           <div class="item-text-body">
             <div class="item-icons">
-              <i class="icon icon-desktop"></i>
-              <i class="icon icon-mobile"></i>
+              <i class="icon icon-desktop tip"></i>
+              <i class="icon icon-mobile tip"></i>
             </div>
             <p>In the wake of the Canterbury earthquakes, Media Suite was engaged by the Christchurch Transport Operations Centre (A joint venture between the New Zealand Transport Authority, Christchurch City Council other local councils) to develop a long-term, web-based communication channel for the travelling public in the greater Christchurch region.</p>
             <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
@@ -62,7 +62,7 @@ menuorder: 2
           </div>
           <div class="item-text-body">
             <div class="item-icons">
-              <i class="icon icon-desktop"></i>
+              <i class="icon icon-desktop tip"></i>
             </div>
             <p>Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The Canterbury Spatial Data Infrastructure projects being developed by Land Information New Zealand.</p>
             <a href="{{ "/case-studies/forward-works-planner" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
@@ -81,7 +81,7 @@ menuorder: 2
           </div>
           <div class="item-text-body">
             <div class="item-icons">
-              <i class="icon icon-desktop"></i>
+              <i class="icon icon-desktop tip"></i>
             </div>
             <p>Media Suite developed the online appraisal system which is enhancing the professional learning of New Zealand teachers.</p>
             <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
@@ -100,7 +100,7 @@ menuorder: 2
           </div>
           <div class="item-text-body">
             <div class="item-icons">
-              <i class="icon icon-desktop"></i>
+              <i class="icon icon-desktop tip"></i>
             </div>
             <p>Media Suite developed the online appraisal system which is enhancing the professional learning of New Zealand teachers.</p>
             <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
