--- a/case-studies/marlborough-cruise-guide/index.html
+++ b/case-studies/marlborough-cruise-guide/index.html
@@ -22,8 +22,8 @@ casestudyid: 2
         <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
       </div>
       <div class="case-study-platforms">
-        <i class="icon icon-desktop"></i>
-        <i class="icon icon-mobile"></i>
+        <i class="icon icon-desktop tip"></i>
+        <i class="icon icon-mobile tip"></i>
       </div>
     </div>
 
