--- a/case-studies/transport-for-christchurch/index.html
+++ b/case-studies/transport-for-christchurch/index.html
@@ -22,20 +22,19 @@ casestudyid: 1
         <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
       </div>
       <div class="case-study-platforms">
-        <i class="icon icon-desktop"></i>
-        <i class="icon icon-mobile"></i>
+        <i class="icon icon-desktop tip"></i>
+        <i class="icon icon-mobile tip"></i>
       </div>
     </div>
 
-    <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100" />
+    <img src="{{ "/img/case-studies/tfc-1.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100" />
     <div class="image-caption max-1000">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
     </div>
 
     <div class="max-1000 align-left space-below-please">
       <h2 class="lowercase">The Problem</h2>
       <p class="space-below-please">Initially the availability of data was limited to roadworks and road closures however over the last 4 years Media Suite has worked with CTOC to develop strategies and tools for collecting, augmenting and communicating a broad range of traveller information to the public via a range of channels. </p>
-      <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
+      <img src="{{ "/img/case-studies/tfc-2.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
       <h2 class="lowercase">The Solution</h2>
       <p class="space-below-please">The engagement with CTOC and NZTA has led us to develop tools for coordinating roadworks, broadcasting incidents, publishing to social media, measuring journey times and congestion as well as building APIs to open data to other developers. Many of these tools are now being utilised nationally.</p>
