--- a/case-studies/appraisal-connector/index.html
+++ b/case-studies/appraisal-connector/index.html
@@ -20,19 +20,19 @@ casestudyid: 3
         <a href="#" target="_blank" class="tech-icon tech-icon-leaflet"><img src="{{ "/img/case-studies/tech-leaflet.png" | prepend: site.baseurl }}" alt="" /></a>
       </div>
       <div class="case-study-platforms">
-        <i class="icon icon-desktop"></i>
-        <i class="icon icon-mobile"></i>
+        <i class="icon icon-desktop tip"></i>
+        <i class="icon icon-mobile tip"></i>
       </div>
     </div>
 
-    <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
+    <img src="{{ "/img/case-studies/interlead-1.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
       <h2 class="lowercase">The Problem</h2>
       <p>After years of educational research and following guidelines established by the New Zealand Ministry of Education, InterLEAD consultants developed the philosophy and ideas behind the Appraisal Connector&trade;.</p>
       <p class="space-below-please">Media Suite were able to capture that philosophy and develop an intuitive web interface that streamlines the review process, allowing teachers and schools to focus on continued professional development.</p>
 
-      <img src="{{ "/img/case-studies/cs-tmp-1.png" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
+      <img src="{{ "/img/case-studies/interlead-2.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
       <h2 class="lowercase">Core Features</h2>
       <p class="space-below-please">
