--- a/people/index.html
+++ b/people/index.html
@@ -401,7 +401,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Patrick is a craftsman who finds pleasure in perfecting his trade. After studying Mechanical Engineering at Boston University he fell into the tech startup world and has been building software ever since. Patrick is one of our remote developers</p>
+                  <p>Patrick is a craftsman who finds pleasure in perfecting his trade. After studying Mechanical Engineering at Boston University he fell into the tech startup world and has been building software ever since. Patrick is one of our remote developers.</p>
                   <strong>&hellip; (Current Timezone UTC +10)</strong>
                 </div>
               </div>
