video will only load on portrait tablet up

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ ishome: true
         <img src="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}" alt="" />
       </div>
       <video class="js-covervid-video" poster="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}" autoplay loop>
-        <source src="http://d88e5668b252622f19fa-53b266e97c0af9c711d72e69e4af35ea.r86.cf4.rackcdn.com/looped.mp4" type="video/mp4">
+        <!-- <source src="http://d88e5668b252622f19fa-53b266e97c0af9c711d72e69e4af35ea.r86.cf4.rackcdn.com/looped.mp4" type="video/mp4"> -->
       </video>
     </div> <!-- .covervid-wrapper -->
     <div class="banner-text-wrap">
