--- a/case-studies/forward-works-planner/index.html
+++ b/case-studies/forward-works-planner/index.html
@@ -26,7 +26,7 @@ casestudyid: 2
     </div>
 
     <div class="video-wrapper space-below-please">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/nDX9JlM716Q" frameborder="0" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/nDX9JlM716Q?wmode=transparent" frameborder="0" allowfullscreen wmode="Opaque"></iframe>
     </div>
 
     <div class="max-1000 align-left space-below-please">
