Switched out ms logos and changed menu font size

--- a/our-services/index.html
+++ b/our-services/index.html
@@ -3,11 +3,33 @@ layout: default
 title: Media Suite | What we do
 menutitle: Our services
 menuorder: 3
+isfullheight: true
 ---
-<div id="main-wrap">
 
-  <div class="panel-inner max-1200 clearfix">
-      <h1>Our services</h1>
+<div id="main-wrap" class="internal-page contact-page">
+
+  <div class="panel-inner max-760 clearfix">
+    <div class="faux-table">
+      <div class="faux-table-cell">
+
+        <h1 class="lowercase underline-orange">We exist to help realise and support your ideas.</h1>
+        <div class="say-hello-body">
+          <h2 class="lowercase">Ideation</h2>
+          <p>Generating, developing and communicating ideas excites us. We are able to draw on decades of experience working with hundreds of great organisations to examine, refine and innovate on your ideas.</p>
+          <h2 class="lowercase">Analysis</h2>
+          <p>We thrive on teasing out requirements from stakeholders, prioritising using value driven methods and fleshing out enough the detail to ensure you’re building the right thing.</p>
+          <h2 class="lowercase">Design</h2>
+          <p>Thoughtful Design is an artform. It is the intersection of strategy, research and analysis with user Interface and experience expressed as a visual design.</p>
+          <h2 class="lowercase">Development</h2>
+          <p>Whether deploying to the cloud, your data centre or to the app store - we’ve got you covered around the clock. We work extensively with cloud providers and local hosting companies to ensure your project is scalable and available.</p>
+          <h2 class="lowercase">Marketing</h2>
+          <p>Successful products are often a balance between solving a problem, an interface the customer can relate to and effective marketing. Our belief is that marketing should start from within and your users are your best salespeople. As well as developing your product we can also help take it to market.</p>
+          <h2 class="lowercase">Support</h2>
+          <p>We will be around for the long haul ready to support and maintain your software through its evolution. Our support team can provide support to your users as well as proactive management of your software and hosting.</p>
+        </div>
+
+      </div>
+    </div>
   </div>
 
 </div> <!-- #main-wrap -->
