removed link from home page logo

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ ishome: true
   <section id="banner-panel">
     <div id="home-panel-nav">
       <div class="max-1200">
-        <a href="{{ "/" | prepend: site.baseurl }}" id="home-nav-logo">
+        <div href="{{ "/" | prepend: site.baseurl }}" id="home-nav-logo">
           <img src="{{ "/img/logo-trans-white.svg" | prepend: site.baseurl }}" alt="Media Suite Logo" class="home-logo" />
-        </a>
+        </div>
         <a href="#" id="home-menu-trigger" class="menu-trigger lowercase js-menu-trigger" data-no-instant>
           <i class="trigger-icon icon icon-menu"></i>
           <span class="menu-trigger-text">Menu</span>
