easy text changes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ ishome: true
               </div>
             </div> <!-- .col-half -->
             <div id="work-panel-content" class="col col-half">
-              <p class="text-semi">We genuinely have a diverse range of clients.</p>
+              <p class="text-semi">At the heart of our work lies our diverse range of clients.</p>
               <p>In the last 15 years we have worked on over 1,400 projects for about 350 clients.</p>
               <a href="{{ "/case-studies" | prepend: site.baseurl }}" class="drop-btn orange-bg">View our portfolio</a>
             </div> <!-- .col-half -->
@@ -127,14 +127,13 @@ ishome: true
           <h2 class="lowercase underline-orange">Cost and Value</h2>
           <div class="cols-wrap">
             <div class="col col-half middle text-size-24">
-              <p>Our clients are diverse, but we're generally the best fit for large, complex projects that have the potential to create a lot of value.</p>
-              <p>Typical projects run from a few months to a year or more, with budgets from $50k to over $1 million.</p>
-              <p>Custom software development is a big investment. We'll help you mitigate risk, make smart trade-offs, and get the maximum value for your budget.</p>
+              <p>We are best suited to large or complex projects which have the potential to create a lot of value. Common projects run from a few months to a year or more, with budgets from $40k to over $1 million.</p>
+              <p>Custom software development is a big investment. We partner with you to mitigate risk, make smart trade-offs, and get the maximum value for your budget.</p>
             </div>
             <div class="col col-half middle">
               <div class="value-wheel-wrap levitate">
                 {% include value-wheel.html %}
-                <div class="value-wheel-middle fancy-pants-font lowercase">Typical Budgets</div>
+                <div class="value-wheel-middle fancy-pants-font lowercase">Common Budgets</div>
               </div> <!-- .value-wheel-wrap -->
               <img src="{{ "/img/wheel-shadow.png" | prepend: site.baseurl }}" alt="" class="wheel-shadow">
             </div> <!-- .col -->
@@ -151,19 +150,18 @@ ishome: true
           <h2 class="lowercase underline-orange">Our Culture</h2>
           <div class="cols-wrap">
             <div class="col third-col" id="culture-col-1">
-              <a href="{{ "/people" | prepend: site.baseurl }}"><img class="home-team-img jiggle" src="{{ "/img/home-team.png" | prepend: site.baseurl }}" alt="" /></a>
-              <h3 class="lowercase text-size-40">We give a shit.</h3><br>
+              <a href="{{ "/people" | prepend: site.baseurl }}" id="home-people-ill"><img class="home-team-img jiggle" src="{{ "/img/home-team.png" | prepend: site.baseurl }}" alt="" /></a>
               <a href="{{ "/people" | prepend: site.baseurl }}" class="drop-btn orange-bg">Get to know the team</a>
             </div>
             <div class="col third-col" id="culture-col-2">
-              <h2 class="lowercase text-size-45">Values</h2>
               <ul class="no-list-style">
-                <li>Curiosity</li>
-                <li>Judgement</li>
+                <li>Curious</li>
                 <li>Openness</li>
                 <li>Freedom</li>
-                <li>Teaching &amp; Learning</li>
-                <li>Communicate well</li>
+                <li>Accountability</li>
+                <li>Integrity</li>
+                <li>Learning</li>
+                <li>Value</li>
               </ul>
               <!-- <a href="who-we-are/" class="drop-btn orange-bg">What we value</a> -->
             </div>
@@ -182,27 +180,30 @@ ishome: true
       <div class="faux-table">
         <div class="faux-table-cell">
           <h2 class="lowercase underline-orange">Locations</h2>
+          <p class="text-size-24">We operate from two main centres with opposing timezones.</p>
           <div class="cols-wrap">
             <div class="col half-col" id="location-col-1">
               <div class="circle-link">
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Christchurch</h3>
                 <h4 class="circle-sub-hd lowercase">New Zealand</h4>
-                <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="js-image-fill" data-no-instant target="_blank">
+                <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="js-image-fill">
                   <img src="{{ "/img/hello-chch.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Christchurc, New Zealand" />
                 </a>
               </div>
+              <p class="text-black"><a href="mailto:hello@mediasuite.co.nz">hello@mediasuite.co.nz</a><br/>
+              <a href="tel:+6433652887">+64 3 365 2887</a></p>
             </div> <!-- .col -->
             <div class="col half-col" id="location-col-2">
               <div class="circle-link">
                 <h3 class="circle-main-hd lowercase fancy-pants-font">Oslo</h3>
                 <h4 class="circle-sub-hd lowercase">Norway</h4>
-                <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="js-image-fill" data-no-instant target="_blank">
+                <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="js-image-fill">
                   <img src="{{ "/img/hello-oslo.jpg" | prepend: site.baseurl }}" alt="Media Suite office in Oslo, Norway" />
                 </a>
               </div>
+              <p class="text-black"><a href="mailto:oslo@mediasuite.co.nz">oslo@mediasuite.co.nz</a></p>
             </div> <!-- .col -->
           </div> <!-- .cols-wrap -->
-          <a href="{{ "/say-hello" | prepend: site.baseurl }}" class="drop-btn orange-bg">Say hello</a>
         </div> <!-- .faux-table-cell -->
       </div> <!-- .faux-table -->
     </div>
