--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ ishome: true
       </div> <!-- .faux-table -->
     </div> <!-- .banner-text-wrap -->
     <a href="#clients-panel" class="js-scroll-to banner-cta js-fade-in-up">
-      Scroll down to learn more <br/>about our services
+      Learn more about our services
       <i class="icon-down-open-big"></i>
     </a>
   </section>
