fixed first panel waypoint issue

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ ishome: true
   <section id="banner-panel">
     <div id="home-panel-nav">
       <div class="max-1200">
-        <div href="{{ "/" | prepend: site.baseurl }}" id="home-nav-logo">
+        <div id="home-nav-logo">
           <img src="{{ "/img/logo-trans-white.svg" | prepend: site.baseurl }}" alt="Media Suite Logo" class="home-logo" />
         </div>
         <a href="#" id="home-menu-trigger" class="menu-trigger lowercase js-menu-trigger" data-no-instant>
