changes to side nav click/scroll listeners

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ ishome: true
 
   <nav class="home-side-nav">
     <ul class="home-side-nav-list">
-      <li><a href="#banner-panel" class="side-nav-link js-goto-panel active" data-no-instant><span class="side-nav-num">one</span></a></li>
-      <li><a href="#clients-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">two</span></a></li>
-      <li><a href="#work-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">three</span></a></li>
-      <li><a href="#value-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">four</span></a></li>
-      <li><a href="#culture-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">five</span></a></li>
-      <li><a href="#hello-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">six</span></a></li>
+      <li><a href="#banner-panel" class="side-nav-link js-goto-panel active" data-no-instant><span class="side-nav-num">one</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#clients-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">two</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#work-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">three</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#value-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">four</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#culture-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">five</span><span class="side-nav-circle"></span></a></li>
+      <li><a href="#hello-panel" class="side-nav-link js-goto-panel" data-no-instant><span class="side-nav-num">six</span><span class="side-nav-circle"></span></a></li>
     </ul>
   </nav>
 
